src/platform-data-model/feature-flag-custom-metadata/objects/Feature_Flag__mdt/Feature_Flag__mdt.object-meta.xml
<CustomObject>
    <description>Used to controll feature flags</description>
    <label>Feature Flag</label>
    <pluralLabel>Feature Flags</pluralLabel>
</CustomObject>