src/platform-data-model/feature-flag-custom-metadata/objects/Feature_Flag__mdt/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>A brief description of what the feature does.</description>
    <inlineHelpText>A brief description of what the feature does.</inlineHelpText>
    <label>Description</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>