src/platform-data-model/feature-flag-custom-metadata/objects/Feature_Flag__mdt/fields/Feature_flag_owner__c.field-meta.xml
<CustomField>
    <fullName>Feature_flag_owner__c</fullName>
    <description>Links to the Nav team that owns the feature flag.</description>
    <inlineHelpText>Links to the Nav team that owns the feature flag.</inlineHelpText>
    <label>Feature flag owner</label>
    <referenceTo>Nav_Team__mdt</referenceTo>
    <relationshipLabel>Feature Flags</relationshipLabel>
    <relationshipName>Feature_Flags</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>