src/platform-data-model/feature-flag-custom-metadata/objects/Feature_Flag__mdt/fields/Is_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Is_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A checkbox field that indicates whether the feature is currently enabled.</description>
    <inlineHelpText>A checkbox field that indicates whether the feature is currently enabled.</inlineHelpText>
    <label>Is Enabled</label>
    <type>Checkbox</type>
</CustomField>