src/platform-data-model/feature-flag-custom-metadata/objects/Feature_Flag__mdt/fields/Required_Custom_Permission__c.field-meta.xml
<CustomField>
    <fullName>Required_Custom_Permission__c</fullName>
    <description>Sometimes a feature is granted on an individual or group level, this ensures that we check both the feature flag and custom permission.</description>
    <inlineHelpText>Sometimes a feature is granted on an individual or group level, this ensures that we check both the feature flag and custom permission.</inlineHelpText>
    <label>Required Custom Permission</label>
    <length>255</length>
    <type>Text</type>
</CustomField>