src/platform-data-model/feature-flag-custom-metadata/objects/Feature_Flag__mdt/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>MasterLabel</columns>
    <columns>Is_Enabled__c</columns>
    <columns>DeveloperName</columns>
    <columns>Required_Custom_Permission__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>