src/platform-data-model/feature-flag-custom-metadata/objects/Feature_Flag__mdt/listViews/Disabled_Features.listView-meta.xml
<ListView>
    <fullName>Disabled_Features</fullName>
    <columns>MasterLabel</columns>
    <columns>Is_Enabled__c</columns>
    <columns>DeveloperName</columns>
    <columns>Required_Custom_Permission__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Enabled__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Disabled Features</label>
    <language>en_US</language>
</ListView>